--- a/alerts/src/main/resources/application.properties
+++ b/alerts/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.datasource.password=vesper
 
 #drop n create table again, good for testing, comment this in production
 #spring.jpa.hibernate.ddl-auto=create
+
+
+## Kafka
+zookeeper.host=localhost:2181
+zookeeper.groupid=alerts
+kafka.bootstrap.servers=localhost:9092
