--- a/ordering/pom.xml
+++ b/ordering/pom.xml
@@ -17,6 +17,7 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<kafka.version>2.3.0</kafka.version>
 	</properties>
 
 	<dependencies>
@@ -29,8 +30,21 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>io.zeebe</groupId>
+		    <artifactId>zeebe-client-java</artifactId>
+		    <version>0.21.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -44,6 +58,7 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
