--- a/warehouse/src/main/resources/application.properties
+++ b/warehouse/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 server.port=8918
+
+
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/warehouse
+spring.datasource.username=postgres
+spring.datasource.password=vesper
+
+#drop n create table again, good for testing, comment this in production
+#spring.jpa.hibernate.ddl-auto=create
+
+
+## Kafka
+zookeeper.host=localhost:2181
+zookeeper.groupid=warehouse
+kafka.bootstrap.servers=localhost:9092
+
+#zeebe.worker.name="worker-name"
+#zeebe.client.broker.contactPoint=127.0.0.1:26500
